--- a/CustomCilcleButton/res/layout/widget_tabbar.xml
+++ b/CustomCilcleButton/res/layout/widget_tabbar.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:myattrs="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="66dp" >
+    android:layout_height="56dp" >
 
     <com.zui.cg.gallery.custom.widget.TapCirCleBarBgView
         android:id="@+id/tabBackView"
@@ -12,22 +12,23 @@
         myattrs:isdefopen="false" />
     <View
         android:id="@+id/centerIV"
-        android:layout_width="66dp"
-        android:layout_height="match_parent" />
+        android:layout_width="56dp"
+        android:layout_height="match_parent" 
+        />
     <View
         android:id="@+id/firstIV"
         android:layout_width="25dp"
         android:layout_height="match_parent"
         android:layout_toRightOf="@id/centerIV"
-        android:layout_marginLeft="10dip"
+        android:layout_marginLeft="15dip" 
          />
 
     <View
         android:id="@+id/secondIV"
         android:layout_width="25dp"
         android:layout_height="match_parent"
-        android:layout_marginLeft="12dip"
-        android:layout_toRightOf="@+id/firstIV"
+        android:layout_marginLeft="22dip"
+        android:layout_toRightOf="@+id/firstIV" 
          />
 
      <View
@@ -35,7 +36,7 @@
         android:layout_width="25dp"
         android:layout_height="match_parent"
         android:layout_marginLeft="20dip"
-        android:layout_toRightOf="@+id/secondIV"
+        android:layout_toRightOf="@+id/secondIV" 
          />
      <!-- 
      android:background="#ff00ff00"
